# art_portfolio_site

./: .gitignore  README.md  fake_smtp.py  main.py  pyproject.toml
mdurocherart/: __init__.py
mdurocherart/about/: __init__.py  routes.py
mdurocherart/home/: __init__.py
mdurocherart/templates/: sidebar.html
mdurocherart/templates/high_quality_view/: homepage.html
mdurocherart/templates/home/: homepage.html
src/: main.py
src/mdurocherart/: __init__.py  config.py  constants.py  db.py  errors.py  login_manager.py  models.py  utils.py
src/mdurocherart/about/: models.py
src/mdurocherart/contact/: __init__.py  models.py  routes.py
src/mdurocherart/db_views/: db_init.py  picture_location_view.txt  pull_image_view.txt
src/mdurocherart/high_quality_view/: __init__.py  models.py  routes.py
src/mdurocherart/home/: routes.py
src/mdurocherart/templates/: base.html  sidebar.html
src/mdurocherart/upload/: __init__.py  models.py  routes.py
tests/: conftest.py
tests/intergration/: test_login.py
tests/unit/: test_couchdb.py  test_login.py  test_mail.py
website/: __init__.py
website/about/: __init__.py  routes.py
website/contact/: __init__.py  routes.py
website/high_quality_view/: __init__.py  routes.py
website/home/: __init__.py  routes.py
website/static/css/: background.css  images.css  page.css  slides.css  text.css
website/templates/: base.html  navbar.html  sidebar.html
website/templates/about/: homepage.html  slides.html
website/templates/contact/: homepage.html
website/templates/high_quality_view/: homepage.html
(+38 files in other folders)
